alb.tf
resource "aws_lb" "onair_alb" {
  name               = "primary-alb"
  internal           = false 
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = var.subnet_ids
}
